# cakibrasbpn

./: README.md  README_PATCH.txt  README_PATCH_2026.txt  SELF_CHECK.md  build.bat  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-windows.yml
scripts/: download-singbox.ps1
src/: App.tsx  i18n.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: connection.rs  errors.rs  geo.rs  lib.rs  main.rs  models.rs  ping.rs  singbox.rs  storage.rs  subscription_fetcher.rs  windows_proxy.rs
src/components/: ConnectionHero.tsx  FilterToolbar.tsx  HistoryPanel.tsx  ImportModal.tsx  ProfileEditorModal.tsx  RouterPanel.tsx  ServerCard.tsx  ServerList.tsx  SettingsPanel.tsx  Sidebar.tsx  SubscriptionModal.tsx  SubscriptionPanel.tsx  TopStatusBar.tsx
src/components/ui/: EmptyState.tsx  Modal.tsx  SkeletonCard.tsx  ToastProvider.tsx
src/hooks/: useRuntimePoll.ts
src/lib/: utils.ts
src/services/: bridge.ts  subscriptionParser.ts
src/services/profileAdapters/: common.ts  hysteria2.ts  index.ts  shadowsocks.ts  socks.ts  trojan.ts  vless.ts  vmess.ts
