[package]
name = "cakibra-sbp"
version = "0.1.0"
description = "CAKIBRA SBP"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "cakibra_sbp_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cakibra-sbp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.1" }

[dependencies]
tauri = { version = "2.8.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0"
dirs = "6.0"
winreg = "0.55"
windows = { version = "0.61", features = ["Win32_Networking_WinInet"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
